# discmoji

./: .devcontainer.json  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  example.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  vulnerability-report.md
.github/workflows/: Pylint.yml  python-package.yml  python-publish.yml  stale.yml
discmoji/: TODO.md  __init__.py  _gateway.py  _http.py  _types.py  app_info.py  bot.py  channel.py  command.py  context.py  contexts.py  decoration.py  emoji.py  errors.py  eventlisteners.py  exceptions.py  gateway.py  guild.py  http.py  intents.py  interactions.py  listeners.py  member.py  message.py  messagesubtypes.py  original.py  overwrites.py  roles.py  snowflake.py  team.py  types.py  user.py
discmoji/cli/: __init__.py  _cli.py  commands.py  main.py  utils.py
discmoji/guild/: __init__.py  c_payload.py  channel.py  e_payload.py  emoji.py  fc_payload.py  ft_payload.py  g_payload.py  gm_payload.py  gp_payload.py  gpayload.py  guild.py  guild_member.py  overwrites.py  po_payload.py  r_payload.py  roles.py  rt_payload.py  s_payload.py  sticker.py  vc_payload.py  welcs_payload.py  welcsc_payload.py
discmoji/guild/mappers/: __init__.py  c_mapper.py  e_mapper.py  fc_mapper.py  ft_mapper.py  g_mapper.py  gm_mapper.py  po_mapper.py  r_mapper.py  rt_mapper.py  s_mapper.py  vc_mapper.py  welcs_mapper.py  welcsc_mapper.py
discmoji/guild_domain/: __init__.py  c_payload.py  channel.py  e_payload.py  fc_payload.py  ft_payload.py  g_payload.py  gm_payload.py  gp_payload.py  guild.py  guild_member.py  overwrites.py  po_payload.py  preview.py  r_payload.py  roles.py  rt_payload.py  s_payload.py  sticker.py  threadmember.py  vc_payload.py  welcomescreen.py  welcs_payload.py  welcsc_payload.py
discmoji/guild_domain/mappers/: __init__.py  e_mapper.py  ft_mapper.py  gm_mapper.py  gp_mapper.py  rt_mapper.py  vc_mapper.py  welcsc_mapper.py
discmoji/message_domain/: attachment.py  embed.py  message.py  message_ref.py  reactions.py
discmoji/slash/: entitlements.py  inter_data.py  interactions.py  interuser.py  resolved.py
discmoji/types/: bot.py
inkling/: api.py
inkling/types/: api.py  bot.py  guild.py
