[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "discmoji"
authors = [
    {name = "mojidev-py"},
]
description = "A discord API wrapper."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["API", "wrapper","discord","library"]
license = {text = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Typing :: Typed"

]
dependencies = [
    "asyncio",
    "aiohttp"
]
version = "0.0.1"

[project.urls]
github = "https://github.com/mojidev-py/discmoji/tree/main"

[tool.setuptools]
packages = [
    "discmoji",
    "discmoji.cli"
]

